# openwebui-tool-websearch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  websearch.py
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/: conftest.py  test_ddg_parser.py  test_filters.py  test_normalize.py  test_runtime.py  test_tool.py
