[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwebui-websearch-tool"
version = "0.1.0"
description = "OpenWebUI tool that exposes web_search and fetch_url to the model, reusing OpenWebUI's configured search backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Richard Braun" }]
keywords = ["openwebui", "open-webui", "tool", "websearch", "llm", "function-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/richardbenedikt/openwebui-websearch-tool"
Issues = "https://github.com/richardbenedikt/openwebui-websearch-tool/issues"
Source = "https://github.com/richardbenedikt/openwebui-websearch-tool"

[tool.setuptools]
py-modules = ["websearch"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # simplify
    "RUF", # ruff
]
ignore = [
    "N802", # OpenWebUI uses dunder kwargs like __request__
    "N803", # same as above for argument names
    "B008", # FastAPI/OpenWebUI patterns sometimes use Field() defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "N802"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
filterwarnings = ["error"]
